(subdir
 docs/
 (rule
  (deps %{project_root}/src/main.bc.js %{project_root}/src/worker.js)
  (targets main.js)
  (mode promote)
  (action
   (progn
    (copy %{project_root}/src/main.bc.js main.js)
    (copy %{project_root}/src/worker.js worker.js)))))

(subdir
 docs
 (subdir
  asset/
  (rule
   (targets playground.min.js)
   (mode
    (promote (until-clean)))
   (deps
    (:js %{workspace_root}/src/main.bc.js))
   (action
    (run
     esbuild
     --platform=browser
     --external:fs
     --external:tty
     --external:child_process
     --external:constants
     --minify
     --bundle
     --outfile=playground.min.js
     %{js})))
  (rule
   (targets worker.min.js)
   (mode
    (promote (until-clean)))
   (deps
    (:js %{workspace_root}/src/worker.js)
    stdlib)
   (action
    (run jsoo_minify %{js} -o %{targets})))
  (rule
   (targets merlin.min.js)
   (mode
    (promote (until-clean)))
   (deps
    (:js %{workspace_root}/src/merlin_worker.bc.js))
   (action
    (run jsoo_minify %{js} -o %{targets})))
  (rule
   (targets
    (dir stdlib))
   (mode
    (promote (until-clean)))
   (action
    (run ../../gen_stdlib.sh)))))

(subdir
 docs/css/
 (rule
  (target main.css)
  (mode promote)
  (deps
   (:config %{workspace_root}/tailwind.config.js)
   (:input %{workspace_root}/docs/css/styles.css)
   (source_tree %{workspace_root}/docs/css/partials)
   %{workspace_root}/docs/index.html)
  (action
   (chdir
    %{workspace_root}
    (run tailwindcss -m -c %{config} -i %{input} -o %{target})))))
